# Curses-Plus

./: .gitignore  LICENSE  README.md  changelog  cursesplus.py  dofile  install.sh  pyproject.toml  setup.py  tyget.py  upload.bat  upload.sh
src/: __cptest.py  cursesplus.py
src/cursesplus/: __init__.py  constants.py  cp.py  filedialog.py  messagebox.py  progressbars.py  tim.py  transitions.py  tuibase.py  utils.py  widgets.py
src/cursesplus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
