[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cursesplus"
version = "2.11.2"
authors = [{name="Enderbyte Programs",email="enderbyte09@gmail.com"},]
description = "An extension program to curses that offers option menus, message boxes, file dialogs and more"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Enderbyte-Programs/Curses-Plus"
"Bug Tracker" = "https://github.com/Enderbyte-Programs/Curses-Plus/issues"
