[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cursesplus"
version = "3.6.2"
authors = [{name="Enderbyte Programs",email="enderbyte09@gmail.com"},]
description = "An advanced terminal-based UI library based off of curses"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Enderbyte-Programs/Curses-Plus"
"Bug Tracker" = "https://github.com/Enderbyte-Programs/Curses-Plus/issues"
